--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
    
   </head>
-  <body>
+  <body class="bg-[#121212]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
